# peak

./: .gitmodules  README.md
hardware/: .gitignore  connection.kicad_sch  display.kicad_sch  fp-lib-table  io.kicad_sch  mcu.kicad_sch  peak.3mf  peak.kicad_pcb  peak.kicad_pro  peak.kicad_sch  peak.round-tracks-config  peak.step  power_supply.kicad_sch  sym-lib-table  wireless.kicad_sch
hardware/bom/: ibom.html
hardware/dfm/gerber/: peak-CuBottom.gbr  peak-CuIn1.gbr  peak-CuIn2.gbr  peak-CuIn3.gbr  peak-CuIn4.gbr  peak-CuTop.gbr  peak-EdgeCuts.gbr  peak-MaskBottom.gbr  peak-MaskTop.gbr  peak-NPTH.drl  peak-PTH.drl  peak-PasteBottom.gbr  peak-PasteTop.gbr  peak-SilkBottom.gbr  peak-SilkTop.gbr  peak-VScore.gbr
hardware/lib/: LTR-329ALS-01_LTO.kicad_mod  PEAK.kicad_sym  lmr51635.kicad_sym
hardware/lib.pretty/: 5034802000.kicad_mod  DEBUG_SMD.kicad_mod  ST7789V2.kicad_mod
hardware/lib/503480-2000/: 503480-2000.dcm  503480-2000.kicad_sym  503480-2000.lib  503480-2000.mod  5034802000.kicad_mod
hardware/lib/LTR_329ALS_01/: 2025-11-13_13-24-09.kicad_sym  LTR-329ALS-01_LTO.step
hardware/lib/PEAK.pretty/: ACT32P_TDK.kicad_mod  LTR-329ALS-01_LTO.kicad_mod  STS4X.kicad_mod
hardware/lib/STS40_CD1B_R3/: STS4X.kicad_mod  STS4X.kicad_sym
hardware/lib/footprints.pretty/: DDC0006A-MFG.kicad_mod
hardware/utils/: bottomStencil.scad  bottomStencil.stl  peak-EdgeCuts.dxf  peak-PasteBottom.dxf  peak-PasteTop.dxf  topStencil.scad  topStencil.stl
software/: .gitignore  AGENTS.md  CMakeLists.txt  PEAKPROTOCOL.h  README.md  eim_config.toml  partitions.csv  platformio.ini  sdkconfig
software/components/connection/: CMakeLists.txt  can.c
software/components/esc/: CMakeLists.txt  controller.c  kt.c  peak.c  peak_private.h
software/components/io/: CMakeLists.txt  battery.c  button.c  t117.c
software/components/loom/: CMakeLists.txt
software/components/loom/include/loom/: font.h  fonts.h  loom.h  types.h
software/components/loom/src/: loom.c  loom_backend_esp32p4.c  loom_command.c  loom_font_noto_sans_16.c  loom_font_noto_sans_32.c  loom_font_noto_sans_digits_144.c  loom_font_noto_sans_digits_96.c  loom_internal.h  loom_raster.c
software/components/peak_ota/: CMakeLists.txt  ota_manager.c
software/components/vesc/: CMakeLists.txt  packet.c  vesc_bridge.c
software/components/wireless/: CMakeLists.txt  ble.c  ble_bridge.c  ble_ota.c  udp_bridge.c  wifi.c
software/components/wireless/include/wireless/: ble.h  ble_bridge.h  ble_ota.h  udp_bridge.h  wifi.h
software/data/: inter_14.vlw
software/display/: CMakeLists.txt  display.c
software/display/include/: display.h
software/io/button/: CMakeLists.txt  button.c
software/io/ltr329/: CMakeLists.txt  ltr329.c
software/io/t117/: CMakeLists.txt  t117.c
software/main/: CMakeLists.txt  Kconfig.projbuild  buttons.c  buttons.h  idf_component.yml  main.c
software/main/boot/: boot.c  boot.h
software/main/can/: can.c  can.h
software/main/display/: display.c  display.h  loom_benchmark.c  loom_benchmark.h
software/main/ui/: dashboard.c  dashboard.h  style.c  style.h  ui.c  ui.h
software/main/utils/: time.h
software/main/vesc_bridge/: vesc_bridge.c  vesc_bridge.h
software/main/wireless/: ble.c  ble_bridge.c  ble_bridge.h  udp_bridge.c  udp_bridge.h  wifi.c
software/mockups/: package-lock.json  package.json
software/mockups/src/: App.tsx  index.css
software/scripts/: activate.sh  loom_font_convert.py  socket-test.py
software/scripts/ble-ota/: ble-ota.py
software/src/: datatypes.h  defines.h  main.cpp
software/src/connection/: BLE.cpp  BLE.h  CAN.cpp  CAN.h  OTA.cpp  OTA.h  VESC.cpp  VESC.h  VESCPacket.cpp  VESCPacket.h  packet.cpp  packet.h
software/utils/: BLESerial.py  TCPSender.py  compress.py  debugCAN.py  debugTCP.py  debugUpload.py  pybldc.py
software/vesc/: comm_can.c
(+46 files in other folders)
